# AWS

./: .dockerignore  .gitignore  README.md  example.env.dev  justfile  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
s3-bucket/: README.md  example.env  main.py  pyproject.toml
s3-bucket/core/: settings.py
src/aws_cli_lite/: main.py
src/core/aws/: session.py
src/core/config/: loader.py  settings.py
src/core/logging/: logger.py
src/s3/: cli.py  service.py
tests/: conftest.py  fakes.py  test_s3_cli.py  test_s3_service.py
